--- a/weathermicroservice/pom.xml
+++ b/weathermicroservice/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>retrofit</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
 
         <dependency>
