--- a/Locationmicroservice/src/main/resources/application.properties
+++ b/Locationmicroservice/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8072
+spring.datasource.url=jdbc:h2:file:./testdb_location
+spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
