💡 Задание 1. Настроить службы person и location, как клиенты Eureka 💡 Задание 2. Создать Bean для экземпляра RestTemplate в приложениях person и location

--- a/Locationmicroservice/src/main/resources/application.properties
+++ b/Locationmicroservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8072
 spring.datasource.url=jdbc:h2:file:./testdb_location
 spring.h2.console.enabled=true
-
+spring.application.name=location-info-service
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
