--- a/person-microservice/src/main/resources/application.properties
+++ b/person-microservice/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=person-info-service
