--- a/weathermicroservice/src/main/resources/application.properties
+++ b/weathermicroservice/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
 server.port=8070
 appid = d22ba39372e01fc8ac7dd2c6bf66fb6a
 url.weather=https://api.openweathermap.org/data/2.5/weather
+spring.application.name=weather-info-service
