Exercise 5.8 22. Обнаружение служб.

--- a/Locationmicroservice/src/main/resources/application.properties
+++ b/Locationmicroservice/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.enabled=true
 spring.application.name=location-info-service
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+weather.url=WEATHER-INFO-SERVICE
