--- a/Locationmicroservice/pom.xml
+++ b/Locationmicroservice/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>Locationmicroservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>Locationmicroservice</name>
     <description>Locationmicroservice</description>
     <properties>
