--- a/person-microservice/src/main/resources/application.properties
+++ b/person-microservice/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port = 8071
+server.port = 8075
 spring.datasource.url=jdbc:h2:file:./testdb_person
 spring.h2.console.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=person-info-service
+url=LOCATION-INFO-SERVICE
